[package]
name = "latest"
version = "0.1.0"
authors = ["Boban Acimovic <boban.acimovic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
octocrab = { version = "0.8", path = "../octocrab" }
dkregistry = "0.5"
futures = "0.3"
log = "0.4"
env_logger = "0.8"
semver = "0.11.0"
